Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,13 +1,15 @@
 ---
-name: 機能追加
-about: 機能追加
+name: バグ報告
+about: バグ報告
 title: ''
 labels: ''
 assignees: ''
 
 ---
 
-## どういう機能か
+## 起こったバグ
+
+## 再現方法
 
 ## やること
 
